Add contact me section on home

--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,7 @@ twitter_username: FabioRosado_
 instagram_username: FabioRosado
 linkedin_username: fabiorosado
 disqus_username: FabioRosado
+dev_username: fabiorosado
 
 # Blog Categories
 default_icon: <i class="fa fa-asterisk" aria-hidden="true"></i>
