--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ email: fabiorosado@outlook.com
 description: > # this means to ignore newlines until "baseurl:"
  My time is divided between flying and coding
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://fabiorosado.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 author: FabioRosado
 
 # Analytics
